update default editor for fields named markdown

--- a/AdminApp/index.html
+++ b/AdminApp/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    
+
 <style>
     textarea {
         resize: both !important;
@@ -16,7 +16,7 @@
 <script src="/adminapp/assets/js/kendo-editor/kendo.custom.min.js"></script>
 <script src="/adminapp/assets/js/monaco-editor/vs/loader.js"></script>
     <sf-app class="sf-app">
-        
+
         <div class="sf-loader -home">
             <div class="sf-loader__content">
                 <span class="sf-loader__rect -first"></span>
@@ -25,6 +25,6 @@
             </div>
         </div>
     </sf-app>
-<script src="/adminapp/runtime.ab88cf7af8ae586900b9.js" defer></script><script src="/adminapp/polyfills-es5.2d54577b3598044e13ef.js" nomodule defer></script><script src="/adminapp/polyfills.0d95ff61aaae11488e49.js" defer></script><script src="/adminapp/styles.f7fffd54c26f80691a25.js" defer></script><script src="/adminapp/vendor.11dfe0e25f27daa3d52b.js" defer></script><script src="/adminapp/main.2ff40dc90c66e1d1769c.js" defer></script></body>
+<script src="/adminapp/runtime.ab88cf7af8ae586900b9.js" defer></script><script src="/adminapp/polyfills-es5.2d54577b3598044e13ef.js" nomodule defer></script><script src="/adminapp/polyfills.0d95ff61aaae11488e49.js" defer></script><script src="/adminapp/styles.f7fffd54c26f80691a25.js" defer></script><script src="/adminapp/vendor.11dfe0e25f27daa3d52b.js" defer></script><script src="/adminapp/main.2ff40dc90c66e1d1769c.js" defer></script><script src="/adminapp/custom-scripts/markdown-field-enhancer.js" defer></script></body>
 
 </html>
